--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,10 +41,12 @@ jobs:
           export BINARY_NAME="$BINARY_PREFIX"$GOOS"_$GOARCH$BINARY_SUFFIX"
           export CGO_ENABLED=0
           export LD_FLAGS="-w -s -X github.com/Mrs4s/go-cqhttp/internal/base.Version=${COMMIT_ID::7}"
+          echo "BINARY_NAME=$BINARY_NAME" >> $GITHUB_ENV
           go build -o "output/$BINARY_NAME" -trimpath -ldflags "$LD_FLAGS" .
-      - name: Create release
+      - name: Create Release
         uses: actions/create-release@v1
-        if: ${{ !github.head_ref && github.event_name == 'push' }}
+        id: create_release
+        if: ${{ !github.head_ref && github.event_name == 'push' && matrix.goos == 'linux' && matrix.goarch == 'amd64' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
