--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
           export LD_FLAGS="-w -s -X github.com/Mrs4s/go-cqhttp/internal/base.Version=${COMMIT_ID::7}"
           echo "BINARY_NAME=$BINARY_NAME" >> $GITHUB_ENV
           go build -o "output/$BINARY_NAME" -trimpath -ldflags "$LD_FLAGS" .
-      - name: Upload artifacts for release
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         if: ${{ !github.head_ref && github.event_name == 'push' }}
         with:
@@ -59,34 +59,25 @@ jobs:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          path: artifacts
+          path: assets
           
-      - name: Create Release
-        uses: actions/create-release@v1
-        id: create_release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: newest
-          release_name: Newest Build
-          draft: false
-          prerelease: true
-          
-      - name: Upload Release Assets
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Prepare assets
         run: |
-          cd artifacts
+          cd assets
           for dir in */; do
             if [ -d "$dir" ]; then
-              asset_name="${dir%/}"
-              asset_path="$dir$asset_name"
-              echo "Uploading $asset_name..."
-              curl \
-                -X POST \
-                -H "Authorization: token $GITHUB_TOKEN" \
-                -H "Content-Type: application/octet-stream" \
-                --data-binary @"$asset_path" \
-                "${{ steps.create_release.outputs.upload_url }}?name=$asset_name"
+              mv "$dir${dir%/}" ./
             fi
           done
+          ls -la
+          
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: newest
+          name: Newest Build
+          draft: false
+          prerelease: true
+          files: assets/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
